jobs/cf_lyric_recommender/builds/6/log
Started by user [8mha:////4AvbKtqCpWGC4/9vlaAOyQD+y56HOfLOpPpkD7K9YRsAAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Running as SYSTEM
Building in workspace /var/root/.jenkins/workspace/cf_lyric_recommender
[cf_lyric_recommender] $ /bin/sh -xe /var/folders/zz/zyxvpxvq6csfxvn_n0000000000000/T/jenkins169476101002269334.sh
+ source /Users/kashifu/hongliang-tmp/envs/pytorch/bin/activate
++ deactivate nondestructive
++ '[' -n '' ']'
++ '[' -n '' ']'
++ '[' -n /bin/sh -o -n '' ']'
++ hash -r
++ '[' -n '' ']'
++ unset VIRTUAL_ENV
++ '[' '!' nondestructive = nondestructive ']'
++ VIRTUAL_ENV=/Users/kashifu/honyu-tmp/envs/pytorch
++ export VIRTUAL_ENV
++ _OLD_VIRTUAL_PATH=/usr/bin:/bin:/usr/sbin:/sbin
++ PATH=/Users/kashifu/honyu-tmp/envs/pytorch/bin:/usr/bin:/bin:/usr/sbin:/sbin
++ export PATH
++ '[' -n '' ']'
++ '[' -z '' ']'
++ _OLD_VIRTUAL_PS1=
++ '[' 'x(pytorch) ' '!=' x ']'
++ PS1='(pytorch) '
++ export PS1
++ '[' -n /bin/sh -o -n '' ']'
++ hash -r
+ cd /Users/kashifu/hongliang-tmp/kirinBrain/lyric_recommender
+ python run_cf.py
Traceback (most recent call last):
  File "run_cf.py", line 1, in <module>
    from collaborative_filtering import MemoryBasedCF
  File "/Users/kashifu/hongliang-tmp/kirinBrain/lyric_recommender/collaborative_filtering.py", line 7
    def __init__(self, loader: LyricLoader = None):
                             ^
SyntaxError: invalid syntax
Build step 'Execute shell' marked build as failure
Finished: FAILURE
